Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -72,6 +72,14 @@ publisher={IEEE},
 journal={2019 IEEE/ACM 41st International Conference on Software Engineering (ICSE)}
 }
 
+@Article{SCALABILITY,
+author={J. Zhu and P. Patros and K. Kent and M. Dawson},
+title={Node.js scalability investigation in the cloud},
+year={2018},
+publisher={ACM},
+journal={Proceeding of 28th Annual International Conference on Computer Science and Software Engineering (CASCON 2018)}
+}
+
 @Article{BUGS,
 author={J. Wang and W. Dou and Y. Gao and C. Gao and F. Qin, K. Yin and J. Wei},
 title={A comprehensive study on real world concurrency bugs in Node.js},
