feat(article): related work

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -80,6 +80,21 @@ publisher={ACM},
 journal={Proceeding of 28th Annual International Conference on Computer Science and Software Engineering (CASCON 2018)}
 }
 
+@misc{CLUSTERTCC,
+author={E. Johansson},
+title={Using cluster module in Node.js for increased performance},
+year={2020},
+note={Trabalho de Conclusão de Curso (Bacharelado em Ciência da Computação)}
+}
+
+@Article{NODEJVERSUSIIS,
+author={L. P. Chitra and R. Satapathy},
+title={Performance Comparison and Evaluation Of Node.Js And Traditional Web Server (IIS)},
+year={2017},
+publisher={IEEE},
+journal={2017 International Conference on Algorithms, Methodology, Models and Applications in Emerging Technologies (ICAMMAET)}
+}
+
 @Article{BUGS,
 author={J. Wang and W. Dou and Y. Gao and C. Gao and F. Qin, K. Yin and J. Wei},
 title={A comprehensive study on real world concurrency bugs in Node.js},
