Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -95,6 +95,13 @@ publisher={IEEE},
 journal={2017 International Conference on Algorithms, Methodology, Models and Applications in Emerging Technologies (ICAMMAET)}
 }
 
+@misc{UDESC,
+author={R. Schroeder and F. dos Santos},
+title={ARQUITETURA E TESTES DE SERVIÇOS WEB DE ALTO DESEMPENHO COM NODE.JS E MONGODB},
+howpublished={\url{https://www.ceavi.udesc.br/arquivos/id_submenu/787/ricardo_schroeder_versao_final_.pdf}},
+note={Acessado em: 28 de agosto de 2023}
+}
+
 @Article{BUGS,
 author={J. Wang and W. Dou and Y. Gao and C. Gao and F. Qin, K. Yin and J. Wei},
 title={A comprehensive study on real world concurrency bugs in Node.js},
