jmetere reference and text

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -155,3 +155,10 @@ title={CORD-19: COVID-19 Open Research Dataset},
 howpublished={\url{https://www.kaggle.com/datasets/allen-institute-for-ai/CORD-19-research-challenge?select=metadata.csv}},
 note={Acessado em: 15 de junho de 2023}
 }
+
+@misc{JMETER,
+author={Apache Software Foundation},
+title={Apache JMeter},
+howpublished={\url{https://jmeter.apache.org}},
+note={Acessado em: 15 de junho de 2023}
+}
