Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -160,5 +160,20 @@ note={Acessado em: 15 de junho de 2023}
 author={Apache Software Foundation},
 title={Apache JMeter},
 howpublished={\url{https://jmeter.apache.org}},
-note={Acessado em: 15 de junho de 2023}
+note={Acessado em: 20 de agosto de 2023}
+}
+
+@misc{PM2,
+author={PM2},
+title={PM2},
+howpublished={\url{https://pm2.keymetrics.io}},
+note={Acessado em: 21 de agosto de 2023}
+}
+
+@Book{DISTRIBUTEDNODE,
+author={Thomas Hunter II},
+title={Distributed Systems with Node.js},
+publisher={O'Reilly},
+year={2020},
+volume={1 ed.}
 }
